# crawler

./: .gitignore  pyproject.toml
backend/src/: main.py
backend/src/crawler/: bookmarks.py  classifier.py  fetcher.py  models.py  parser.py  search.py  service.py
backend/src/static/: index.html
