[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "tldextract>=5.3.1",
    "uvicorn>=0.38.0",
]
